--- a/examples/post_list/pubspec.yaml
+++ b/examples/post_list/pubspec.yaml
@@ -23,9 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_bloc: ^2.0.0
+  flutter_bloc: ^2.1.0
   equatable: ^0.6.0
   requests: ^3.0.3
+  timezone: ^0.5.6
   posts_api:
     path: posts_api
 dev_dependencies:
